Small fix with footer spacing

--- a/website/style.css
+++ b/website/style.css
@@ -75,7 +75,7 @@ h2 {
 }
 
 #footer_notes {
-	margin: .7em 20% 5px 20%;
+	margin: .7em 10% 5px 10%;
 	height: 1.2em;
 	padding: 0px;
 }
